reports/P05-functions.log
Traceback (most recent call last):
  File "/opt/homebrew/anaconda3/lib/python3.8/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/opt/homebrew/anaconda3/lib/python3.8/site-packages/nbclient/client.py", line 1087, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/opt/homebrew/anaconda3/lib/python3.8/site-packages/nbclient/util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/opt/homebrew/anaconda3/lib/python3.8/site-packages/nbclient/util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "/opt/homebrew/anaconda3/lib/python3.8/asyncio/base_events.py", line 616, in run_until_complete
    return future.result()
  File "/opt/homebrew/anaconda3/lib/python3.8/site-packages/nbclient/client.py", line 540, in async_execute
    await self.async_execute_cell(
  File "/opt/homebrew/anaconda3/lib/python3.8/site-packages/nbclient/client.py", line 832, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/opt/homebrew/anaconda3/lib/python3.8/site-packages/nbclient/client.py", line 740, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply['content'])
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
def dostuff(a, b, c):
    a = a + ' addition'  # immutable string, therefore assign, therefore local
    b.append('addition') # mutable list, being mutated.  change is global
    c = c + ['addition'] # mutable list, but being assigned, so change is local.
    print("Inside function: ")
    print(a, b, c)

a = 'string '
b = ['string in list', ]
c = ['string in list', ]

print("Before function call: ")
print(a, b, c)

dostuff(a, b, c)

print("After function call: ")
print(a, b, c)



# Functions I

- defining a function
    - `def`
    - `return`
- executing a function
    - parameters
    - separate namespace
------------------

[0;36m  File [0;32m"<ipython-input-4-08d09e098ea6>"[0;36m, line [0;32m24[0m
[0;31m    - defining a function[0m
[0m               ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-4-08d09e098ea6>, line 24)

